--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 bottle==0.12.9
 bottle-rest==0.4.1
 Django==1.9.2
+django-jsonify==0.3.0
 ecdsa==0.13
+jsonfield==1.0.3
 nose==1.3.7
 paramiko==1.16.0
 pycrypto==2.6.1
